--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -336,7 +336,82 @@
             Kmom05
         </h2>
         <p>
-            text here
+            <ul>
+                <li>
+                    <p>
+                        Gick det bra att jobba igenom övningen med Symfony och
+                        Doctrine. Något särskilt du tänkte/reagerade på under
+                        övningen?
+                    </p>
+                    <ul>
+                        <li>
+                            Det gick bra med övningen, men det var tufft i
+                            början. Till slut förstod jag hur Doctrine
+                            fungerade. Jag reagerade mest nog på setup av
+                            databas, installation av sqlite3 på windows. På
+                            windows var det lite svårt när man inte har fulla
+                            admin rättigheter. Sen setup av tables i databasen.
+                            Det var krångligt att hålla koll på migrate etc. Och
+                            ibland var man tvungen att gå in i migrate scriptet
+                            och ändra saker manuellt.
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <p>
+                        Berätta om din applikation och hur du tänkte när du
+                        byggde upp den. Tänkte du något speciellt på
+                        användargränssnittet?
+                    </p>
+                    <ul>
+                        <li>
+                            Jag tänkte på att allt skulle flyta ihop så bra som
+                            möjligt. Jag såg till så att det var så självklart
+                            som möjligt att använda.
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <p>
+                        Gick det bra att jobba med ORM i CRUD eller vad anser du
+                        om det, jämför gärna med andra sätt att jobba med
+                        databaser?
+                    </p>
+                    <ul>
+                        <li>
+                            Det känns relativt bra. Jag skulle nog helst undvika
+                            att hantera just databaser i min framtida karriär.
+                            Jag skulle föredra att arbeta med andra delar av
+                            mjukvaruutveckling.
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <p>
+                        Vad är din uppfattning om ORM så här långt och relatera
+                        gärna till andra sätt att jobba med applikationskod mot
+                        databaser?
+                    </p>
+                    <ul>
+                        <li>
+                            ORM funkar bra men jag tror återigen min åsikt
+                            färgas av att jag inte tycker om att arbeta med PHP
+                            eller Symfony.
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <p>
+                        Vilken är din TIL för detta kmom?
+                    </p>
+                    <ul>
+                        <li>
+                            Lärde mig om Doctrine och ORM. Lärde mig att
+                            implementera sqlite databas med Symfony.
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </p>
     </article>
 
