--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -24,7 +24,7 @@
             path(
                 'book_edit',
                 {
-                    id: book.id
+                    bookid: book.id
                 }
             )
             }}"
