--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,6 +37,7 @@
                     <li><a href="{{ path('report') }}">Report</a></li>
                     <li><a href="{{ path('lucky') }}">Lucky</a></li>
                     <li><a href="{{ path('library_show') }}">Library</a></li>
+                    <li><a href="{{ path('metrics') }}">Metrics</a></li>
                     <li>
                         <div class="dropdown">
                             <a href="{{ path('games') }}">Games</a>
