--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -420,7 +420,66 @@
             Kmom06
         </h2>
         <p>
-            text here
+            <ul>
+                <li>
+                    <p>
+                        Hur uppfattade du verktyget phpmetrics och fann du några
+                        särskilda bitar mer värdefulla än andra? Var det några
+                        särskilda metrics eller bilder du uppskattade?
+                    </p>
+                    <ul>
+                        <li>
+                            PHPMetrics var helt okej. Men vissa varningar var
+                            lite svårtolkade. Och kanske lite för generella. Men
+                            jag tyckte det var intressant att man kunde se
+                            genomsnitts komplexiteten per klass till exempel.
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <p>
+                        Berätta hur det gick att integrera med Scrutinizer och
+                        vilken är din första känsla av verktyget och dess
+                        badges? Vilken kodtäckning och kodkvalitet fick du efter
+                        första bygget?
+                    </p>
+                    <ul>
+                        <li>
+                            Det var helt ok att integrera med Scrutinizer. Jag
+                            uppskattar badges för det ger ett hum om hur
+                            välstrukturerat projektet är. Även hur mycket av
+                            koden som är testad. Scrutinizer Code Quality ger en
+                            generell känsla om hur läsbar koden är.
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <p>
+                        Hur är din egen syn på kodkvalitet, berätta lite om den?
+                        Tror du man kan man påvisa kodkvalitet i någon viss mån
+                        med badges eller vad tror du?
+                    </p>
+                    <ul>
+                        <li>
+                            Min egna syn är att man bör först och främst täcka
+                            koden med unit tester. Automatisering för mig är
+                            också viktigt, så jag tycker man alltid bör sätta
+                            upp det snabbt i ett projekt. Sen finns det gott om
+                            mer komplicerad testning som är svårare osv. Jag
+                            tror att badges kan ge en snabb inblick i hur pass
+                            lättunderhållet ett projekt är.
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <p>
+                        Vilken är din TIL för detta kmom?
+                    </p>
+                    <ul>
+                        <li>Lärde mig använda PHPMetrics och Scrutinizer.</li>
+                    </ul>
+                </li>
+            </ul>
         </p>
     </article>
 {% endblock %}
