--- a/templates/proj/index.html.twig
+++ b/templates/proj/index.html.twig
@@ -15,11 +15,11 @@
                     JackDash™
                 </div>
 
-                <div class="player">
+                {# Dealer's hand #}
+                <div class="dealer">
                     <p>
                         Dealer
                     </p>
-
                     <div class="card unknown">
                         <span class="bg">
                             <img src="{{ asset('img/cardback.svg') }}" />
@@ -32,20 +32,33 @@
                     </div>
                 </div>
 
-                <div class="player">
-                    <div class="card unknown">
-                        <span class="bg">
-                            <img src="{{ asset('img/cardback.svg') }}" />
-                        </span>
-                    </div>
-                    <div class="card unknown">
-                        <span class="bg">
-                            <img src="{{ asset('img/cardback.svg') }}" />
-                        </span>
-                    </div>
-                    <p>
-                        You
-                    </p>
+                {# Player's hands #}
+                <div class="player-hands">
+                    {% for handIndex in 1..(playerHands|length) %}
+                        <div class="player">
+                            <p>
+                                Player {{ handIndex }}
+                            </p>
+                            <div class="card unknown">
+                                <span class="bg">
+                                    <img src="{{
+                                        asset(
+                                            'img/cardback.svg'
+                                        )
+                                        }}" />
+                                </span>
+                            </div>
+                            <div class="card unknown">
+                                <span class="bg">
+                                    <img src="{{
+                                        asset(
+                                            'img/cardback.svg'
+                                        )
+                                        }}" />
+                                </span>
+                            </div>
+                        </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
